--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/functions-js": "^2.89.0",
+    "@supabase/supabase-js": "latest",
     "resend": "^3.0.0"
   }
 }
